tests/outref/TAF04_errors.ref

select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname));
select firstname from names n1 where count(firstname||lastname) < 1;
select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname)));
select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n1.lastname));
select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname||n1.lastname)));
select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n2.lastname));
select all 1 from names c where exists (select 1 from names n2 group by n2.id having count(c.id) > 2) GROUP BY c.id;
select 1 from names n0 group by firstname having EXISTS (select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname)));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 84):

select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname));
                                                                                   ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 38):

select firstname from names n1 where count(firstname||lastname) < 1;
                                     ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where count(firstname||lastname) < 1;
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 123):

select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname)));
                                                                                                                          ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname)));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 84):

select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n1.lastname));
                                                                                   ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 98):

select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n1.lastname));
                                                                                                 ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n1.lastname));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 123):

select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname||n1.lastname)));
                                                                                                                          ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 137):

select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname||n1.lastname)));
                                                                                                                                        ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where EXISTS (select 1 from names n2 order by exists(select 1 from names n2 order by count(n1.firstname||n1.lastname)));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 84):

select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n2.lastname));
                                                                                   ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname||n2.lastname));
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 92):

select all 1 from names c where exists (select 1 from names n2 group by n2.id having count(c.id) > 2) GROUP BY c.id;
                                                                                           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select all 1 from names c where exists (select 1 from names n2 group by n2.id having count(c.id) > 2) GROUP BY c.id;
[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 141):

select 1 from names n0 group by firstname having EXISTS (select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname)));
                                                                                                                                            ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n0 group by firstname having EXISTS (select firstname from names n1 where EXISTS (select 1 from names n2 order by count(n1.firstname)));

